--- a/src/test.html
+++ b/src/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Example</title>
-    <script src="example.js">
+    <script src="test1.js">
     </script>
 
 </head>
