--- a/src/js_pic.html
+++ b/src/js_pic.html
@@ -8,18 +8,26 @@
 <body>
 <script type="text/javascript" src="test3.js"></script>
 <h1>Snapshots</h1>
-<ul>
+<ul id="gallery">
     <li>
-        <a href="images/fireworks.jpg" onclick="showPic(this);return false" title="A firework display">Fireworks</a>
+        <a href="images/fireworks.jpg" title="A firework display">
+            <img src="images/th_fireworks.jpg" alt="Fireworks">
+        </a>
     </li>
     <li>
-        <a href="images/coffee.jpg" onclick="showPic(this);return false" title="A cup of black coffee">Coffee</a>
+        <a href="images/coffee.jpg" title="A cup of black coffee">
+            <img src="images/th_coffee.jpg" alt="Coffee">
+        </a>
     </li>
     <li>
-        <a href="images/rose.jpg" onclick="showPic(this);return false" title="A red, red rose">Rose</a>
+        <a href="images/rose.jpg" title="A red, red rose">
+            <img src="images/th_rose.jpg" alt="Rose">
+        </a>
     </li>
     <li>
-        <a href="images/bigben.jpg" onclick="showPic(this);return false" title="A famous clock">Big Ben</a>
+        <a href="images/bigben.jpg" title="A famous clock">
+            <img src="images/th_rose.jpg" alt="Big Ben">
+        </a>
     </li>
 </ul>
 <img src="images/holder.jpg" id="holder" alt="my gallery8">
