--- a/src/js_pic.html
+++ b/src/js_pic.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/layout.css" media="screen">
 </head>
 <body>
-<script type="text/javascript" src="test3.js"></script>
+
 <h1>Snapshots</h1>
 <ul id="gallery">
     <li>
@@ -30,8 +30,6 @@
         </a>
     </li>
 </ul>
-<img src="images/holder.jpg" id="holder" alt="my gallery8">
-<p id="description">choose an image</p>
-
+<script type="text/javascript" src="pic.js"></script>
 </body>
 </html>
