--- a/src/test.html
+++ b/src/test.html
@@ -39,7 +39,7 @@
     <li class="sale">cheese</li>
     <li class="sale important">milk</li>
 </ul>
-<script src="test3.js">
+<script src="pic.js">
 
 </script>
 <p class="special">this paragraph has special class</p>
