--- a/src/js_pic.html
+++ b/src/js_pic.html
@@ -26,10 +26,12 @@
     </li>
     <li>
         <a href="images/bigben.jpg" title="A famous clock">
-            <img src="images/th_rose.jpg" alt="Big Ben">
+            <img src="images/th_bigben.jpg" alt="Big Ben">
         </a>
     </li>
 </ul>
-<script type="text/javascript" src="pic.js"></script>
+<script type="text/javascript" src="scripts/addLoadEvent.js"></script>
+<script type="text/javascript" src="scripts/pic.js"></script>
+
 </body>
 </html>
