所有代码都是chrome上泡过的

--- a/src/animate.html
+++ b/src/animate.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <p id="message">here</p>
+<p id="message2">zk</p>
 <script src="scripts/addLoadEvent.js"></script>
 <script src="scripts/animate.js"></script>
 </body>
