--- a/src/demo/list.html
+++ b/src/demo/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Design</title>
-    <link rel="stylesheet" href="styles/list.css" media="screen">
+    <link rel="stylesheet" href="../styles/demo/list.css" media="screen">
 </head>
 <body>
 <h1>Web Design</h1>
@@ -20,11 +20,12 @@
     </li>
 </ol>
 <div id="slideshow">
-    <img src="images/holder.jpg" alt="building blocks of web design" id="preview">
+    <img src="../images/holder.jpg" alt="building blocks of web design" id="preview">
 </div>
-<script src="scripts/addLoadEvent.js"></script>
-<script src="scripts/animate.js"></script>
-<script src="scripts/list.js"></script>
+<img src="../images/dota.gif">
+<script src="../scripts/global.js"></script>
+<script src="../scripts/demo/animate.js"></script>
+<script src="../scripts/demo/list.js"></script>
 
 </body>
 </html>
