--- a/src/demo/TestH1.html
+++ b/src/demo/TestH1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>by zk</title>
-    <script src="scripts/addLoadEvent.js"></script>
-    <script src="scripts/css-dom.js"></script>
-    <link rel="stylesheet" media="screen" href="styles/css-dom.css">
+    <script src="../scripts/global.js"></script>
+    <script src="../scripts/demo/css-dom.js"></script>
+    <link rel="stylesheet" media="screen" href="../styles/demo/css-dom.css">
 </head>
 <body>
 <h1>hold the front page</h1>
