--- a/src/demo/cities.html
+++ b/src/demo/cities.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>cities</title>
-    <link rel="stylesheet" media="screen" href="styles/city.css">
+    <link rel="stylesheet" media="screen" href="../styles/demo/city.css">
 </head>
 <body>
 <table>
@@ -29,7 +29,7 @@
     </tr>
     </tbody>
 </table>
-<script src="scripts/addLoadEvent.js"></script>
-<script src="scripts/city.js"></script>
+<script src="../scripts/global.js"></script>
+<script src="../scripts/demo/city.js"></script>
 </body>
 </html>
